# zup_downloader_deepseek

./: Cargo.toml  zup_release_bat.bat
src/: dp0.rs  main.rs
