[package]
name = "zup_downloader_deepseek"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = "4.0"
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
