[package]
name = "zup_downloader_deepseek"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
